# polkadot-sdk-parachain-template

./: Cargo.toml  rust-toolchain.toml
.github/actions/ubuntu-dependencies/: action.yml
.github/tests/: zombienet-smoke-test.zndsl
.github/workflows/: ci.yml  pr-reminder.yml  release.yml  test-zombienet.yml
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
