[package]
name = "parachain-template-node"
description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk. (polkadot v1.9.0)"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

# [[bin]]
# name = "parachain-template-node"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
log = { workspace = true, default-features = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { version = "0.22", features = ["server"] }
futures = "0.3.28"
serde_json = { workspace = true, default-features = true }
parachain-template-runtime = { version = "0.1.0", path = "../runtime" }
frame-benchmarking = { version = "31.0.0" }
frame-benchmarking-cli = { version = "35.0.1" }
pallet-transaction-payment-rpc = { version = "33.0.0" }
sc-basic-authorship = { version = "0.37.0" }
sc-chain-spec = { version = "30.0.1" }
sc-cli = { version = "0.39.0" }
sc-client-api = { version = "31.0.0" }
sc-offchain = { version = "32.0.0" }
sc-consensus = { version = "0.36.0" }
sc-executor = { version = "0.35.0" }
sc-network = { version = "0.37.0" }
sc-network-sync = { version = "0.36.0" }
sc-rpc = { version = "32.0.0" }
sc-service = { version = "0.38.0" }
sc-sysinfo = { version = "30.0.0" }
sc-telemetry = { version = "17.0.0" }
sc-tracing = { version = "31.0.0" }
sc-transaction-pool = { version = "31.0.0" }
sc-transaction-pool-api = { version = "31.0.0" }
sp-api = { version = "29.0.0" }
sp-block-builder = { version = "29.0.0" }
sp-blockchain = { version = "31.0.0" }
sp-consensus-aura = { version = "0.35.0" }
sp-core = { version = "31.0.0" }
sp-keystore = { version = "0.37.0" }
sp-io = { version = "33.0.0" }
sp-runtime = { version = "34.0.0" }
sp-timestamp = { version = "29.0.0" }
substrate-frame-rpc-system = { version = "31.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }

# Polkadot
polkadot-cli = { version = "10.0.0", features = ["rococo-native"] }
polkadot-primitives = { version = "10.0.0" }
xcm = { version = "10.0.0", package = "staging-xcm", default-features = false }
cumulus-client-cli = { version = "0.10.0" }
cumulus-client-collator = { version = "0.10.0" }
cumulus-client-consensus-aura = { version = "0.10.0" }
cumulus-client-consensus-common = { version = "0.10.0" }
cumulus-client-consensus-proposer = { version = "0.10.0" }
cumulus-client-service = { version = "0.10.0" }
cumulus-primitives-core = { version = "0.10.0" }
cumulus-primitives-parachain-inherent = { version = "0.10.0" }
cumulus-relay-chain-interface = { version = "0.10.0" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"parachain-template-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
