[package]
name = "parachain-template-node"
description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk. (polkadot v1.14.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

# [[bin]]
# name = "parachain-template-node"

[dependencies]
clap = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
futures = { workspace = true }
serde_json = { workspace = true, default-features = true }
docify = { workspace = true }
parachain-template-runtime = { version = "0.1.0", workspace = true }
frame-benchmarking = { version = "36.0.0", workspace = true, default-features = true }
frame-benchmarking-cli = { version = "40.0.0", workspace = true, default-features = true }
pallet-transaction-payment-rpc = { version = "38.0.0", workspace = true, default-features = true }
sc-basic-authorship = { version = "0.42.0", workspace = true, default-features = true }
sc-chain-spec = { version = "35.0.0", workspace = true, default-features = true }
sc-cli = { version = "0.44.0", workspace = true, default-features = true }
sc-client-api = { version = "35.1.0", workspace = true, default-features = true }
sc-offchain = { version = "37.0.0", workspace = true, default-features = true }
sc-consensus = { version = "0.41.0", workspace = true, default-features = true }
sc-executor = { version = "0.39.0", workspace = true, default-features = true }
sc-network = { version = "0.42.0", workspace = true, default-features = true }
sc-network-sync = { version = "0.41.0", workspace = true, default-features = true }
sc-rpc = { version = "37.0.0", workspace = true, default-features = true }
sc-service = { version = "0.43.0", workspace = true, default-features = true }
sc-sysinfo = { version = "35.0.0", workspace = true, default-features = true }
sc-telemetry = { version = "22.0.0", workspace = true, default-features = true }
sc-tracing = { version = "35.0.0", workspace = true, default-features = true }
sc-transaction-pool = { version = "35.0.0", workspace = true, default-features = true }
sc-transaction-pool-api = { version = "35.0.0", workspace = true, default-features = true }
sp-api = { version = "33.0.0", workspace = true, default-features = true }
sp-block-builder = { version = "33.0.0", workspace = true, default-features = true }
sp-blockchain = { version = "35.1.0", workspace = true, default-features = true }
sp-consensus-aura = { version = "0.39.0", workspace = true, default-features = true }
sp-core = { version = "34.0.0", workspace = true, default-features = true }
sp-keystore = { version = "0.40.0", workspace = true, default-features = true }
sp-io = { version = "37.0.0", workspace = true, default-features = true }
sp-runtime = { version = "38.0.0", workspace = true, default-features = true }
sp-timestamp = { version = "33.0.0", workspace = true, default-features = true }
substrate-frame-rpc-system = { version = "36.0.0", workspace = true, default-features = true }
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true
polkadot-cli = { version = "15.0.0", features = ["rococo-native"], workspace = true, default-features = true }
polkadot-primitives = { version = "14.0.0", workspace = true, default-features = true }
xcm.workspace = true
cumulus-client-cli = { version = "0.15.0", workspace = true, default-features = true }
cumulus-client-collator = { version = "0.15.0", workspace = true, default-features = true }
cumulus-client-consensus-aura = { version = "0.15.0", workspace = true, default-features = true }
cumulus-client-consensus-common = { version = "0.15.0", workspace = true, default-features = true }
cumulus-client-consensus-proposer = { version = "0.14.0", workspace = true, default-features = true }
cumulus-client-service = { version = "0.15.0", workspace = true, default-features = true }
cumulus-primitives-core = { version = "0.14.0", workspace = true, default-features = true }
cumulus-primitives-parachain-inherent = { version = "0.14.0", workspace = true, default-features = true }
cumulus-relay-chain-interface = { version = "0.15.0", workspace = true, default-features = true }
color-print = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", workspace = true, default-features = true }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"parachain-template-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
