[package]
name = "parachain-template-runtime"
description = "A parachain runtime template built with Substrate and Cumulus, part of Polkadot Sdk. (polkadot v1.14.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { version = "23.0.0", optional = true, workspace = true, default-features = true }
docify = { workspace = true }

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
smallvec = { workspace = true, default-features = true }
docify = { workspace = true }
pallet-parachain-template = { version = "0.1.0", workspace = true }
frame-benchmarking = { version = "36.0.0", optional = true, workspace = true }
frame-executive = { version = "36.0.0", workspace = true }
frame-metadata-hash-extension = { version = "0.4.0", workspace = true }
frame-support = { version = "36.0.0", features = ["experimental"], workspace = true }
frame-system = { version = "36.0.0", workspace = true }
frame-system-benchmarking = { version = "36.0.0", optional = true, workspace = true }
frame-system-rpc-runtime-api = { version = "33.0.0", workspace = true }
frame-try-runtime = { version = "0.42.0", optional = true, workspace = true }
pallet-aura = { version = "35.0.0", workspace = true }
pallet-authorship = { version = "36.0.0", workspace = true }
pallet-balances = { version = "37.0.0", workspace = true }
pallet-message-queue = { version = "39.0.0", workspace = true }
pallet-session = { version = "36.0.0", workspace = true }
pallet-sudo = { version = "36.0.0", workspace = true }
pallet-timestamp = { version = "35.0.0", workspace = true }
pallet-transaction-payment = { version = "36.0.0", workspace = true }
pallet-transaction-payment-rpc-runtime-api = { version = "36.0.0", workspace = true }
sp-api = { version = "33.0.0", workspace = true }
sp-block-builder = { version = "33.0.0", workspace = true }
sp-consensus-aura = { version = "0.39.0", workspace = true }
sp-core = { version = "34.0.0", workspace = true }
sp-genesis-builder = { version = "0.14.0", workspace = true }
sp-inherents = { version = "33.0.0", workspace = true }
sp-offchain = { version = "33.0.0", workspace = true }
sp-runtime = { version = "38.0.0", workspace = true }
sp-session = { version = "34.0.0", workspace = true }
sp-std = { version = "14.0.0", workspace = true }
sp-transaction-pool = { version = "33.0.0", workspace = true }
sp-version = { version = "36.0.0", workspace = true }
pallet-xcm = { version = "15.0.0", workspace = true }
polkadot-parachain-primitives = { version = "13.0.0", workspace = true }
polkadot-runtime-common = { version = "15.0.0", workspace = true }
xcm.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true
cumulus-pallet-aura-ext = { version = "0.15.0", workspace = true }
cumulus-pallet-parachain-system = { version = "0.15.0", workspace = true }
cumulus-pallet-session-benchmarking = { version = "17.0.0", workspace = true }
cumulus-pallet-xcm = { version = "0.15.0", workspace = true }
cumulus-pallet-xcmp-queue = { version = "0.15.0", workspace = true }
cumulus-primitives-aura = { version = "0.14.0", workspace = true }
cumulus-primitives-core = { version = "0.14.0", workspace = true }
cumulus-primitives-utility = { version = "0.15.0", workspace = true }
cumulus-primitives-storage-weight-reclaim = { version = "6.0.0", workspace = true }
pallet-collator-selection = { version = "17.0.0", workspace = true }
parachains-common = { version = "15.0.0", workspace = true }
parachain-info.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-session-benchmarking/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-storage-weight-reclaim/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-message-queue/std",
	"pallet-parachain-template/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-utility/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-parachain-template/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-parachain-template/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
